# GitBot2

./: .breakpoints  .env  .gitignore  _token_gen.py  aaaaaaa.json  bbbbbbbb.json  configuration.py  cookies.txt  encryption.py  ensure_libs.py  firebase.py  init.py  keep_alive.py  main.py  notes.txt  pyproject.toml  requirements.txt  run.py  test.json  test.py  test.txt  utils.py  versions.py  views.py
bot/: .env  appinput.py  configuration.py  cookies.txt  encryption.py  ensure_libs.py  main.py  music_embeds.py  requests.py  utils.py  views.py  web_requests.py
bot/cogs/: application_bot.py  audit_logs_bot.py  configuration_bot.py  cookies.txt  help_command_bot.py  level_bot.py  mod_bot.py  music_bot.py  reaction_bot.py
bot/configure_bot/: application.json  auditlogchannel.json  configuration.json  cursewords.json  levelroles.json  levels.json  reactions.json  warns.json
bot/notif/: 23533.json  30366.json  32094.json  37194.json  48974.json  55702.json  71731.json  75371.json  79193.json
cogs/: audit_logs_bot.py  configuration_bot.py  level_bot.py  mod_bot.py  music_bot.py  reaction_bot.py
configure_bot/: configuration.json  cursewords.json  levels.json
website/: .env  base_site.html  check_prod.py  index.html  test.py  w_backend.py  website.py  website.wsgi
website/static/: auth.js  base.js  config.js  console.js  guilds.js  guilds.py  home.js  navbar.js  package-lock.json  test.py  types.js  utils.js
website/static/css/: console.css  home.css  (+3 more)
website/templates/: base_site.html  console.html  home.html  index.html  navbar.html  serverlist.html  test.html
