[tool.poetry]
name = "tragicentireapplicationprogrammer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
youtube-dl = "^2020.7.28"
async-timeout = "^3.0.1"
PyNaCl = "^1.4.0"
flask = "^1.1.2"
ffmpeg = "^1.4"
pytz = "^2022.1"
spotify-dl = "^8.3.0"
discord = "^1.7.3"
MarkupSafe = "^2.1.1"
cryptography = "^37.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
